// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SectionHeading/Default matches snapshot 1`] = `
<div>
  <h3
    class="text-muted-foreground mb-2 text-xs font-semibold tracking-wider uppercase"
  >
    Participants
  </h3>
</div>
`;

exports[`SectionHeading/Labels matches snapshot 1`] = `
<div>
  <h3
    class="text-muted-foreground mb-2 text-xs font-semibold tracking-wider uppercase"
  >
    Labels
  </h3>
</div>
`;
